# Business-Management-System

./: .gitignore  README.md
backend/: Cargo.toml  README.md  info.txt  sample.env
backend/postman/: Business-Management-System.postman_collection.json
backend/src/: main.rs
backend/src/configuration/: mod.rs  setting.rs
backend/src/errors/: mod.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limiter.rs
backend/src/models/: mod.rs  product.rs  user.rs
backend/src/product_operations/: mod.rs  product_model.rs  product_service.rs  product_structure.rs
backend/src/repositories/: mod.rs  product_repository.rs  user_repository.rs
backend/src/routes/: auth.rs  mod.rs  product.rs  user.rs
backend/src/services/: auth_service.rs  mod.rs  product_service.rs
backend/src/user_operations/: mod.rs  user_model.rs  user_service.rs  user_structure.rs
backend/src/utils/: db.rs  jwt.rs  logger.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/layout/: AppShell.jsx  AuthBootstrap.jsx  PageWrapper.jsx  ProtectedRoute.jsx  PublicOnlyRoute.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx  Modal.jsx  Skeleton.jsx
frontend/src/hooks/: useAuth.js
frontend/src/pages/: Placeholder.jsx
frontend/src/pages/Auth/: Login.jsx  Register.jsx
frontend/src/services/: api.js  auth.service.js
frontend/src/store/: authStore.js
frontend/src/utils/: constants.js  helpers.js  theme.js
(+1 files in other folders)
